Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Tag selector to select the 'body' element */
 body {
-  background-color: light blue;
+  background-color: #00b3e6;
 }
 
 /* Tbackground of the <body> element (whole document) to #00b3e6 (light blue)
